슬라이드 폼은 완성, loop에서 오류, 아직 해결하지 못함

--- a/index.html
+++ b/index.html
@@ -251,7 +251,13 @@
           </div>
           <!-- Section 02 : Portfolio [01]project -->
           <div class="project-allwrap">
-            <strong class="title-tag"># Project</strong>
+            <div class="project-tag-wrap">
+              <strong class="title-tag"># Project</strong>
+              <div class="btn-wrap">
+                <button type="button" class="btn-up"><i class="hidden">위</i></button>
+                <button type="button" class="btn-down"><i class="hidden">아래</i></button>
+              </div>
+            </div>
             <div class="project-swiper-wrap">
               <div class="project-text-wrap">
                 <div class="swiper project-text">
@@ -486,19 +492,40 @@
               <div class="project-img-wrap">
                 <div class="swiper project-img">
                   <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+                    <div class="swiper-slide">
+                      <figure>
+                        <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+                      </figure>
+                    </div>
+
                   </div>
                 </div>
               </div>
-            </div>
-            <!-- If we need navigation buttons -->
-            <div class="btn-wrap">
-              <button type="button" class="btn-up"><i class="hidden">위</i></button>
-              <button type="button" class="btn-down"><i class="hidden">아래</i></button>
             </div>
           </div>
           <!-- Section 02 : Portfolio [02]Graphic -->
