--- a/index.html
+++ b/index.html
@@ -530,31 +530,64 @@
           </div>
           <!-- Section 02 : Portfolio [02]Graphic -->
           <div class="graphic-allwrap">
-            <strong class="title-tag"># Graphic</strong>
+            <div class="graphic-tag-wrap">
+              <strong class="title-tag"># Graphic</strong>
+              <div class="btn-wrap">
+                <button type="button" class="btn-prev"><i class="hidden">이전</i></button>
+                <button type="button" class="btn-next"><i class="hidden">다음</i></button>
+              </div>
+            </div>
             <div class="graphic-list-wrap">
               <div class="swiper graphic-slider">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <figure>
-                      <img src="" alt="">
+                      <img
+                        src="
+                      https://images.unsplash.com/photo-1604079628040-94301bb21b91?q=80&w=2731&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                     </figure>
                   </div>
                   <div class="swiper-slide">
                     <figure>
-                      <img src="" alt="">
+                      <img
+                        src="
+                      https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?q=80&w=4000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                     </figure>
                   </div>
                   <div class="swiper-slide">
                     <figure>
-                      <img src="" alt="">
+                      <img
+                        src="
+                      https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?q=80&w=4096&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
+                    </figure>
+                  </div>
+                  <div class="swiper-slide">
+                    <figure>
+                      <img
+                        src="https://images.unsplash.com/photo-1622547748225-3fc4abd2cca0?q=80&w=4032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
+                    </figure>
+                  </div>
+                  <div class="swiper-slide">
+                    <figure>
+                      <img
+                        src="https://images.unsplash.com/photo-1643916861364-02e63ce3e52f?q=80&w=4140&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
+                    </figure>
+                  </div>
+                  <div class="swiper-slide">
+                    <figure>
+                      <img
+                        src="https://images.unsplash.com/photo-1637611331620-51149c7ceb94?q=80&w=4140&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                     </figure>
                   </div>
                 </div>
               </div>
-              <div class="btn-wrap">
-                <button type="button" class="btn-prev"><i class="hidden">이전</i></button>
-                <button type="button" class="btn-next"><i class="hidden">다음</i></button>
-              </div>
+
             </div>
           </div>
         </div>
@@ -574,17 +607,23 @@
               </figure>
             </div>
             <div class="contact-text">
-              <dl>
-                <dt>Name</dt>
-                <dd>
-                  <p>류솔아</p>
-                  <p>RYOO SOL A</p>
-                </dd>
-                <dt>E-mail</dt>
-                <dd>mav7937@naver.com</dd>
-                <dt>Phone</dt>
-                <dd>010-2700-7937</dd>
-              </dl>
+              <div class="contact-text-wrap">
+                <dl>
+                  <dt>Name</dt>
+                  <dd>
+                    <span>류솔아</span>
+                    <span>RYOO SOL A</span>
+                  </dd>
+                </dl>
+                <dl>
+                  <dt>E-mail</dt>
+                  <dd>mav7937@naver.com</dd>
+                </dl>
+                <dl>
+                  <dt>Phone</dt>
+                  <dd>010-2700-7937</dd>
+                </dl>
+              </div>
             </div>
           </div>
         </div>
