슬라이드 우선 문제 해결, absolute로 해볼수 있을지 고민, icon5 애니메이션 시도

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Pine is Fine!</title>
 
   <link rel="stylesheet" href="./css/aos.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -87,8 +88,12 @@
                   <span class="ani5-clip">
                     <span class="icon-ani5-sec2"></span>
                   </span>
-                  <span class="icon-ani5-sec3"></span>
-                  <span class="icon-ani5-sec4"></span>
+                  <span class="ani5-clip">
+                    <span class="icon-ani5-sec3"></span>
+                  </span>
+                  <span class="ani5-clip">
+                    <span class="icon-ani5-sec4"></span>
+                  </span>
                 </div>
               </div>
             </div>
