scrollTrigger를 달았는데 뭔가 이상하다

--- a/test.html
+++ b/test.html
@@ -5,21 +5,299 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    @import url('//fonts.googleapis.com/earlyaccess/nanumpenscript.css');
 
-    body {
-      font-family: 'NanumPen';
-    }
+  <link rel="stylesheet" href="./css/aos.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
+  <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/test.css">
 
-    h2 {
-      font-size: 40px;
-    }
-  </style>
+  <script src="./js/jquery-3.7.0.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
+  <script src="./js/swiper-bundle.min.js"></script>
+  <script src="./js/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="./js/test.js"></script>
+
 </head>
 
 <body>
-  <h2>안녕하세요</h2>
+  <!-- Section 02 : Portfolio [01]project -->
+  <div class="project-allwrap">
+    <div class="project-tag-wrap">
+      <strong class="title-tag"># Project</strong>
+      <div class="btn-wrap">
+        <button type="button" class="btn-up"><i class="hidden">위</i></button>
+        <button type="button" class="btn-down"><i class="hidden">아래</i></button>
+      </div>
+    </div>
+    <div class="project-swiper-wrap">
+      <div class="project-text-wrap">
+        <div class="swiper project-text">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>01</span>
+                  <strong>Samsonite OnlineMall</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>01</span>
+                    <strong>Samsonite OnlineMall</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>02</span>
+                  <strong>Melody Mangroove</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>02</span>
+                    <strong>Melody Mangroove</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>03</span>
+                  <strong>COEX Aquarium</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>03</span>
+                    <strong>COEX Aquarium</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>04</span>
+                  <strong>Portfolio Site</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>04</span>
+                    <strong>Portfolio Site</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>05</span>
+                  <strong>Toy Story4 MicroSite</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>05</span>
+                    <strong>Toy Story4 MicroSite</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="inner">
+                <div class="project-title">
+                  <span>06</span>
+                  <strong>Joe's Breath</strong>
+                </div>
+                <div class="project-info-wrap">
+                  <div class="project-title">
+                    <span>06</span>
+                    <strong>Joe's Breath</strong>
+                  </div>
+                  <div class="project-tag-list">
+                    <span class="tag">반응형</span>
+                    <span class="tag">리디자인</span>
+                    <span class="tag">1인 프로젝트</span>
+                  </div>
+                  <div class="project-info-detail">
+                    <dl>
+                      <dt>PROJECT.</dt>
+                      <dd>쌤소나이트 공식 온라인몰 : 반응형 웹 디자인 및 구현</dd>
+                    </dl>
+                    <dl>
+                      <dt>PERIOD.</dt>
+                      <dd>2024. 03. 24 - 2024. 05. 28</dd>
+                    </dl>
+                    <dl>
+                      <dt>TOOL.</dt>
+                      <dd>
+                        <span><i class="hidden">Figma</i></span>
+                        <span><i class="hidden">Illustrator</i></span>
+                        <span><i class="hidden">Visual Studio Code</i></span>
+                      </dd>
+                    </dl>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="project-img-wrap">
+        <div class="swiper project-img">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img src="./img/project-thumb-samsonite.png" alt="Samsonite OnlineMall">
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
