--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
   <script src="./js/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
   <script src="./js/script.js"></script>
   <script src="./js/ani-script.js"></script>
 </head>
 
 <body>
   <!-- 사이트 최초 진입시 보이는 애니메이션 -->
-  <!-- <div class="logo-ani">
-    <video src="./img/intro-ani.mp4" controls style="width: 50%; height: 50%"></video>
+  <!-- <div class="logo-ani-wrap">
+    <div class="logo-ani">
+      <video src="./img/intro-ani.mp4" muted autoplay playsinline></video>
+    </div>
+    <button type="button" class="btn-skip">Click to Skip</button>
   </div> -->
 
   <!-- nav가 상단이 아니라 사이드에 있어도 Header로 잡는지? -->
@@ -41,7 +46,7 @@
               <a href="#"><i class="hidden">Pine is Fine!</i></a>
             </h1>
             <ul class="gnb">
-              <li class="active"><a href="#section0"><b>intro</b></a></li>
+              <li><a href="#section0"><b>intro</b></a></li>
               <li><a href="#section1"><b>about</b></a></li>
               <li><a href="#section2"><b>portfolio</b></a></li>
               <li><a href="#section3"><b>contact</b></a></li>
